syntax = "proto3";

option csharp_namespace = "Catalog.API.Grpc.Proto";



service Catalog{
	rpc GetCatalogPrice (CatalogPriceRequest) returns (CatalogPriceResponse){}
  
}
message CatalogPriceRequest {
	string CatalogId=1;
}
message CatalogPriceResponse {
	int32 Price=1;
}
